k8s/network-policies/allow-ingress-to-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-lb-healthcheck
  namespace: dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 130.211.0.0/22
        - ipBlock:
            cidr: 35.191.0.0/16
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 3001
        - protocol: TCP
          port: 3000
